@@ -40,7 +40,7 @@ if ($playerinfo['dev_emerwarp'] > 0)
     $dest_sector = mt_rand (0, $sector_max - 1);
     $result_warp = $db->Execute ("UPDATE {$db->prefix}ships SET sector = ?, dev_emerwarp = dev_emerwarp - 1 WHERE ship_id = ?;", array ($dest_sector, $playerinfo['ship_id']));
     db_op_result ($db, $result_warp, __LINE__, __FILE__);
-    log_move ($db, $playerinfo['ship_id'], $dest_sector);
+    \bnt\LogMove::writeLog ($db, $playerinfo['ship_id'], $dest_sector);
     $l_ewd_used = str_replace("[sector]", $dest_sector, $l_ewd_used);
 
     $variables['dest_sector'] = $dest_sector;
