@@ -19,26 +19,23 @@
 
 require_once './config/db_config.php';          // Database variables
 include_once './global_defines.php';            // Defines used in a few places
-include_once './includes/check_login.php';
-include_once './includes/db_kill_player.php';
-include_once './includes/db_op_result.php';
-include_once './includes/load_languages.php';
-include_once './includes/log_move.php';
-include_once './includes/num_armor.php';
-include_once './includes/num_beams.php';
-include_once './includes/num_energy.php';
-include_once './includes/num_fighters.php';
-include_once './includes/num_holds.php';
-include_once './includes/num_shields.php';
-include_once './includes/num_torpedoes.php';
-include_once './includes/player_log.php';
-include_once './includes/request_var.php';
-include_once './includes/text_gotomain.php'; // This will be eliminated while migrating to templates
-include_once './includes/number.php';        // This will be eliminated while migrating to templates
 
-// Needed for the Plugin System/Handler
-//require_once './classes/pluginsystem/plugin_system.php';
+include_once './includes/check_login.php';		// Needs to be refactored and split into several functions
+include_once './includes/db_kill_player.php';   // Remove global variables, redo calc_ownership so that it autoloads
+include_once './includes/db_op_result.php';		// Check whether we can translate the hard-coded text
+include_once './includes/load_languages.php';   // Global variables are a mess in this file
+include_once './includes/num_armor.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_beams.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_energy.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_fighters.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_holds.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_shields.php';		// Remove globals, change function name to PSR compliance
+include_once './includes/num_torpedoes.php';	// Remove globals, change function name to PSR compliance
+include_once './includes/player_log.php';		// Perfect - ready for conversion
+include_once './includes/request_var.php';		// This injects register globals -- eliminate
+include_once './includes/text_gotomain.php'; 	// This will be eliminated while migrating to templates
+include_once './includes/number.php';        	// This will be eliminated while migrating to templates
 
-require './vendor/autoload.php';
-require_once './common.php';
+require './vendor/autoload.php';				// Load the auto-loader
+require_once './common.php';					// Loads the boot-strap messy code for each page
 ?>
