@@ -43,7 +43,7 @@ do
             $query = $db->Execute("UPDATE {$db->prefix}ships SET sector = ?, cleared_defences=' ' WHERE ship_id=?", array ($newsector, $row['ship_id']));
             db_op_result ($db, $query, __LINE__, __FILE__);
             player_log ($db, $row['ship_id'], LOG_TOW, "$row[sector]|$newsector|$row[max_hull]");
-            log_move ($db, $row['ship_id'], $newsector);
+            \bnt\LogMove::writeLog ($db, $row['ship_id'], $newsector);
             $res->MoveNext();
         }
     }
